Fixes topbar-item margin on mobile

--- a/src/_topbars.scss
+++ b/src/_topbars.scss
@@ -156,12 +156,8 @@
 		}
 
 		@media	(min-width: 600px) {
-			margin: 0 16px;
-			display: inline-block;
-		}
-
-		@media	(min-width: 720px) {
 			margin: 0 12px;
+			display: inline-block;
 		}
 
 		@media	(min-width: 1280px) {
